operator/pkg/gateway-api/testdata/gateway/listenerset-gateway-parent-section-name-not-found/output/gateway-section-name.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: gateway-section-name
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: gw-section.com
      name: gw-listener
      port: 80
      protocol: HTTP
status:
  attachedListenerSets: 1
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: Gateway successfully scheduled
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: Gateway waiting for address
      reason: AddressNotAssigned
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: gw-listener
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
