operator/pkg/gateway-api/testdata/gateway/listenerset-gateway-parent-section-name-not-found/output/httproute-route-via-listenerset.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: route-via-listenerset
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listenerset-section-name
      namespace: gateway-conformance-infra
      sectionName: ls-only-listener
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: ListenerSet
        name: listenerset-section-name
        namespace: gateway-conformance-infra
        sectionName: ls-only-listener
